; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_cb_server.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_cb_server.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32, %struct.simple_data* }
%struct.simple_data = type { %struct.simple_data*, %struct.mg_connection* }

@MG_EV_ACCEPT = common dso_local global i32 0, align 4
@cb_sclient = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, i32, i8*)* @cb_server to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cb_server(%struct.mg_connection* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.mg_connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.simple_data*, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %9 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %8, i32 0, i32 1
  %10 = load %struct.simple_data*, %struct.simple_data** %9, align 8
  store %struct.simple_data* %10, %struct.simple_data** %7, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @MG_EV_ACCEPT, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %27

15:                                               ; preds = %3
  %16 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %17 = load %struct.simple_data*, %struct.simple_data** %7, align 8
  %18 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %17, i32 0, i32 1
  store %struct.mg_connection* %16, %struct.mg_connection** %18, align 8
  %19 = load %struct.simple_data*, %struct.simple_data** %7, align 8
  %20 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %19, i32 0, i32 0
  %21 = load %struct.simple_data*, %struct.simple_data** %20, align 8
  store %struct.simple_data* %21, %struct.simple_data** %7, align 8
  %22 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %23 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %22, i32 0, i32 1
  store %struct.simple_data* %21, %struct.simple_data** %23, align 8
  %24 = load i32, i32* @cb_sclient, align 4
  %25 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %26 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %25, i32 0, i32 0
  store i32 %24, i32* %26, align 8
  br label %27

27:                                               ; preds = %15, %3
  %28 = load %struct.simple_data*, %struct.simple_data** %7, align 8
  %29 = load i32, i32* %5, align 4
  %30 = call i32 @count_events(%struct.simple_data* %28, i32 %29)
  ret void
}

declare dso_local i32 @count_events(%struct.simple_data*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
